Fix scrollbar

--- a/src/views/Browse.scss
+++ b/src/views/Browse.scss
@@ -34,7 +34,7 @@
 
     .content {
         flex: 1;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 
     .crumbs {
